scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,6 @@
   .font-outline-2 {
     -webkit-text-stroke: 2px white;
   }
-
-  .font-outline-4 {
-    -webkit-text-stroke: 4px white;
-  }
 }
 
 @layer components {
@@ -86,19 +82,21 @@
   }
 }
 
-body::-webkit-scrollbar-track {
-  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-  background-color: #1E1D1D;
-}
-
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 8px;
   background-color: #000000;
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: #f5f5f5;
-  height: 100px;
+::-webkit-scrollbar-track {
+  background: #363636;
+  border-radius: 100vw;
+  margin-block: 40vh;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #f5f5f5;
+  border-radius: 100vw;
+  height: 5vh;
 }
 
 .slide-in {
